# rollplayer

./: .gitignore  CLIENT_TESTING.md  FEATURE.md  PYTHON_DEVX_REVIEW.md  README.md  TESTING.md  USAGE.md  ai_handler.py  chat_bot.py  chat_connector.js  codecov.yml  command_parser.py  config.py  game_engine.py  gm_handler.py  health_check.py  justfile  pyproject.toml  requirements.txt  roll20_api_script.js  ruff.toml  shadowdark_rules.py  smoke_test.py  test_client.html  test_command_parser.py  test_game_engine.py  test_gm_handler.py  test_websocket.sh  test_with_curl.sh  ty.toml
.cursor/: worktrees.json
.github/workflows/: deploy-fly.yml  integration-tests.yml  test.yml  unit-tests.yml
N/: A
docs/: README.md  requirements.md  testing.md  usage.md
docs/adr/: 0001-architecture-overview.md  0002-rest-api-yaml-artifacts-architecture.md  0003-current-architecture-state.md  0004-centralized-utility-library.md  0004-ci-pipeline-restructoring
infrastructure/: .dockerignore  Dockerfile  README.md  build.sh  fly.toml  fly.toml.example  manage-volumes.sh  volumes.toml
rules/shadowdark/: core.yaml
scripts/: cli.py  shell.py  smoke_test.py
src/gm_chatbot/: __init__.py  main.py
src/gm_chatbot/adapters/: __init__.py  cli.py  interface.py  rest.py  roll20.py
src/gm_chatbot/api/: __init__.py  app.py  dependencies.py  exceptions.py
src/gm_chatbot/api/routers/: actions.py  campaigns.py  characters.py  chat.py  discord.py  health.py  players.py  rules.py  sessions.py  tools.py
src/gm_chatbot/artifacts/: __init__.py  store.py  validator.py
src/gm_chatbot/discord/: __init__.py  bot.py  config.py  startup.py
src/gm_chatbot/discord/commands/: __init__.py  admin.py  base.py  campaign.py  character.py  gameplay.py  session.py
src/gm_chatbot/discord/gateway/: __init__.py  client.py  events.py
src/gm_chatbot/discord/utils/: __init__.py  error_handler.py  rate_limiter.py
src/gm_chatbot/discord/views/: __init__.py  components.py  embeds.py  pagination.py
src/gm_chatbot/lib/: __init__.py  datetime.py  types.py
src/gm_chatbot/models/: __init__.py  action.py  base.py  campaign.py  character.py  chat.py  dice.py  discord_binding.py  discord_link.py  membership.py  player.py  rules.py  session.py  session_thread.py
src/gm_chatbot/rules/: __init__.py  engine.py  loader.py
src/gm_chatbot/services/: __init__.py  campaign_service.py  character_service.py  discord_binding_service.py  discord_context_service.py  discord_linking_service.py  game_state_service.py  gm_service.py  player_service.py  session_service.py
src/gm_chatbot/tools/: __init__.py  registry.py
src/gm_chatbot/tools/dice/: __init__.py  cli_tool.py  interface.py
src/gm_chatbot/tools/llm/: __init__.py  anthropic_provider.py  interface.py  openai_provider.py
tests/: conftest.py
tests/fixtures/: __init__.py  data.py  services.py  store.py
tests/integration/: test_campaign_members.py  test_campaigns.py  test_characters.py  test_constraints.py  test_players.py  test_sessions.py
tests/integration/discord/: __init__.py  test_character_commands.py
tests/smoke/: __init__.py  conftest.py  test_critical_paths.py
tests/unit/: __init__.py  test_campaign_membership.py  test_character_service.py  test_player_service.py  test_session_service.py
tests/unit/lib/: __init__.py  test_datetime.py  test_types.py
