[project]
name = "gm-chatbot"
version = "2.0.0"
description = "Game Master Assistant for tabletop RPGs"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0",
    "openai>=1.50.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "typer>=0.13.0",
    "structlog>=24.0.0",
    "scalar-fastapi>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "discord.py>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "ty>=0.0.8",
    "pre-commit>=4.0.0",
    "dpytest>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "ty>=0.0.8",
    "pre-commit>=4.0.0",
    "dpytest>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "smoke: Quick smoke tests for critical business logic paths",
    "slow: Tests that take a long time to run",
    "integration: Integration tests (may use filesystem)",
]

[tool.coverage.run]
source = ["src/gm_chatbot"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # FastAPI Depends() in defaults is correct pattern
    "ARG001", # Some unused args required by interfaces (Discord, pytest)
    "ARG002", # Some unused args required by interfaces (Discord, pytest)
    "B904",   # Exception chaining not always needed
    "SIM105", # try-except-pass is acceptable pattern
    "SIM103", # Explicit if-else is clearer for type safety
    "UP046",  # Generic subclass is acceptable for compatibility
]

[tool.ruff.lint.isort]
known-first-party = ["gm_chatbot"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.analysis]
respect-type-ignore-comments = true
